# ImagePlus

./: CHANGELOG.md  CMakeLists.txt  LICENSE.md  mod.json
.github/workflows/: multi-platform.yml  release.yml
include/: api.hpp  events.hpp
src/: Events.cpp  Utils.hpp
src/formats/: gif.cpp  png.cpp  webp.cpp
